<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/margin_horizontal"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingVertical="@dimen/padding_vertical"
    tools:context=".StudentJournalActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:placeholderText="@string/text_input_layout_student_name_placeholder">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextStudentName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_text_student_name_hint"
            android:inputType="textCapWords"
            android:digits="@string/allowed_characters"/>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/button_save_text" />

        <Button
            android:id="@+id/buttonShowList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_show_list_text" />

    </LinearLayout>

    <TextView
        android:id="@+id/textViewStudentsList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" />

</LinearLayout>