<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/margin_horizontal"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingVertical="@dimen/padding_vertical"
    tools:context=".StudentInfoActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutStudentInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:placeholderText="@string/text_input_layout_student_info_placeholder">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextStudentInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_text_student_info_hint"
            android:imeOptions="actionNone"
            android:inputType="textCapWords" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonShowInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_show_info_text" />

    <TextView
        android:id="@+id/textViewStudentsInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" />

</LinearLayout>